<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tousand Network</string>
    <string name="action_settings">Settings</string>

    <string-array name="menus">
        <item>meet the family</item>
        <item>search members</item>
        <item>hubs</item>
        <item>action items</item>
        <item>opportunities</item>
        <item>my profile</item>
        <item>credits</item>
    </string-array>
    <string name="title_directory_fragment">MEET THE FAMILY</string>
    <string name="title_me_fragment">MY PROFILE</string>
    <string name="title_credi_fragment">CREDITS</string>
    <string name="title_todos_fragment">ACTION ITEMS</string>
    <string name="title_find_fragment">WHO\'S AROUND ?</string>
    <string name="title_market_place">OPPORTUNITIES</string>
    <string name="title_hubs">HUBS</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_global_menu">GlobalMenuActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Me Fragment -->
    <string name="full_name">John Do</string>
    <string name="hub_name">Hub</string>
    <string name="ambassadors_title">Ambassadors</string>
    <string name="company_name">Company</string>
    <string name="empty_field">information not specified</string>
    <string name="empty_hub_name">Not specified</string>
    <string name="goal_name">Goal</string>
    <string name="bio_name">Bio</string>
    <string name="interest_name">Interest</string>
    <string name="company_title">Company</string>
    <string name="goal_title">Goal</string>
    <string name="bio_title">Bio</string>
    <string name="contact_title">Contact</string>
    <string name="interests_title">Interests</string>
    <string name="email_notif_on_comment">   Receive email on comment</string>
    <string name="email_notif_on_todo">   Receive email on todo</string>
    <string name="push_notif_on_comment">   Receive push notification on comment</string>
    <string name="push_notif_on_todo">   Receive push notification on todo</string>
    <string name="action_save">Save</string>
    <string name="action_logout">LOG OUT</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_send_mail_title">Send email</string>
    <string name="action_send_mail_object">HQ Contact</string>
    <string name="search_members">search member by name, hub or interests ...</string>
    <string name="search_hubs">Search hubs ...</string>
    <string name="display_more">Display more results</string>
    <string name="display_all">Display all results</string>
    <string name="my_position">My position</string>
    <string name="button_reply_text">Reply</string>

    <string name="country_prompt">Choose a country</string>
    <string name="your_comment">Your comment</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>